--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
             {{>header}}
+            <p>This site was created by Roy Schiff. It uses data from Mapbox api and Weatherstacks api</p>
             <img class="portrait" src="/img/cake.png">
     </div>
     {{>footer}}
